# branchai-python-client

./: README.rst  pyproject.toml  setup.cfg
branchai/: __init__.py  adapter.py  client.py  pipeline.py  recipe.py
