[project]
name = "branchai-client"
version = "0.0.1"
description = "Python client for BranchAI"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
dependencies = [
    "requests>=2.28.0"
]

[project.urls]
homepage = "https://www.branch-ai.com/"
documentation = "https://github.com/branch-ai/branchai-python-client"
repository = "https://github.com/branch-ai/branchai-python-client"
