[metadata]
name = branchai-client
description = A python native branchai client
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/branch-ai/branchai-python-client
author = BranchAI
author_email = support@branch-ai.com,
license_files = LICENSE.md
project_urls =
    Documentation = https://github.com/branch-ai/branchai-python-client
    Source = https://github.com/branch-ai/branchai-python-client
    Tracker = https://github.com/branch-ai/branchai-python-client/issues
dynamic = ["version"]

[options]
zip_safe = False
packages =
    branchai

platforms = any
include_package_data = True
install_requires =
    requests>=2.28.0,<2.29.0
python_requires = >=3.8